--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "biome:check": "biome check",
-    "biome:fix": "biome check -apply"
+    "biome:fix": "biome check -apply",
+    "server": "json-server --watch src/jobs.json --port 5001"
   },
   "dependencies": {
+    "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-spinners": "^0.14.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.3",
